TWO VOLUMES IN ONE SPACE

--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -28,7 +28,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -169,16 +171,18 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Programs </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Programs <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
   <div class="wrapper">
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
@@ -212,16 +216,18 @@
   <hr>
   <div class="blankHM"></div>
 
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Diagrams </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Diagrams <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
 
   <div class="blankHM"></div>
   <!--diagrams-->
@@ -296,16 +302,19 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Renders </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Renders <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
+
   <div class="blankHM"></div>
   <!-- renders -->
   <div class="Grid Grid--full u-textCenter wrapper">
@@ -357,16 +366,18 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Plans and Sections </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Plans and Sections <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <!-- floor plans -->
 
@@ -432,16 +443,18 @@
   <div class="blankHS"></div>
   <hr>
   <div class="blankHS"></div>
-  <!--Arrow-->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
+
+
+  <!-- Arrow -->
+  <div class="Grid Grid--full wrapper">
     <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Site </p>
-        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="element">
+        <h2 class="tArrow"> Site <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
-  <!--Arrow-->
+  <!-- Arrow -->
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter wrapper">
     <div class="Grid-cell">
