--- a/architecture/index.html
+++ b/architecture/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | UX Designer | Architecture</title>
+  <title>Vicky W. | UX Designer | Architecture Projects</title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
@@ -198,7 +198,7 @@
                 <h3 class="arrCard" data-aos="fade-up"><strong>RECREATION COMMONS</strong></h3>
 
                 <p class="lineHorizAll"></p>
-                <h6 class=""> <strong>Studio:</strong> &nbsp; INTEGRATED DESIGN STUDIO, ARCH 203
+                <h6 class=""> <strong>Studio:</strong> &nbsp; ARCH 203 - Integrated Design Studio
                 </h6>
                 <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;One semester | Fall
                     2018</span> </h6>
