--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -151,15 +151,26 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="Grid-cell">
-        <div class="element widthL"> <img src="diagram.jpg" alt="DIAGRAM">
+        <div class="element"> <img src="diagram.jpg" alt="DIAGRAM">
         </div>
       </div>
+
       <div class="Grid-cell">
         <div class="element">
-          <h1>TWO VOLUMES IN ONE SPACE</h1>
+          <h3 data-aos="fade-up"><strong>RECREATION COMMONS</strong></h3>
           <p class="lineHorizAll"></p>
-          <h6>the purpose of these two volumes is to distinguish two types of
-            programs: for the public, another for private use.</h6>
+          <h5 class=""> <strong>Studio:</strong> &nbsp; ARCH 203 - Integrated Design Studio
+          </h5>
+          <h5><strong>Duration: </strong> <span class="textItalic">&nbsp;One semester | Fall
+              2018</span> </h5>
+          <h5> <strong>Project:</strong> &nbsp; M. Arch, CED, UC Berkeley</h5>
+          <h5> <strong>Site:</strong> &nbsp; Site: 110 Franklin St. San Francisco</h5>
+          <h5> <strong>Scale:</strong> &nbsp; Total Floor Area: 22900 s.f. 4 Floors</h5>
+          <h5> <strong>Instructor:</strong> &nbsp; Roddy Creedon</h5>
+          <p class="lineHorizAll"></p>
+          <h4>Two volums create one spcace</h4>
+
+          <h5>The two volumes are designed to differentiate between programs for public access and those for private use in the Recreation Commons.</h5>
         </div>
       </div>
 
@@ -190,9 +201,8 @@
       </div>
       <div class="Grid-cell">
         <h4>PRIVATE VS. PUBLIC</h4>
-        <h6>insert two volumes into one space two distinguish two main
-          programs. one for the public, another one for private purpose</p>
-        </h6>
+        <h5>Integrate two volumes within a single space to differentiate between the main programs: one for public access and the other for private purposes.</p>
+        </h5>
       </div>
     </div>
     <div class="blankHM"></div>
@@ -205,9 +215,9 @@
       </div>
       <div class="Grid-cell">
         <h4">EXERCISE VS. LEISURE</h4>
-          <h6>the circulation integrates the two volumes as one space. it
+          <h5>the circulation integrates the two volumes as one space. it
             creates a dynamic view between the leisure and training sections.</p>
-          </h6>
+          </h5>
       </div>
     </div>
 
@@ -240,7 +250,7 @@
       <div class="Grid-cell">
         <div class="element ">
           <h3>MANIPULATION OF TWO VOLUMES</h3>
-          <h6>Void vs. Solid </h6>
+          <h5>Void vs. Solid </h5>
         </div>
       </div>
 
@@ -255,9 +265,9 @@
       <div class="Grid-cell">
         <div class="element ">
           <h3>LIGHT AND AIR</h3>
-          <h6>an opening on the southern side provides and a gap between adjacent
+          <h5>an opening on the southern side provides and a gap between adjacent
             build providing all-day nature daylight from the top all the way to the swimming pool at
-            first floor </h6>
+            first floor </h5>
         </div>
       </div>
 
@@ -272,8 +282,8 @@
       <div class="Grid-cell">
         <div class="element ">
           <h3>FACADE DESGIN</h3>
-          <h6>all the windows equally set, and the metal mesh with two types of
-            coating redomly setup </h6>
+          <h5>all the windows equally set, and the metal mesh with two types of
+            coating redomly setup </h5>
         </div>
       </div>
 
@@ -295,7 +305,7 @@
     <div class="Grid-cell">
       <h4>SECTION PERSPECTIVE</h4>
 
-      <h6>F1-5 with Facade Detail </h6>
+      <h5>F1-5 with Facade Detail </h5>
     </div>
   </div>
   <!--Section Perspective -->
@@ -327,7 +337,7 @@
     <div class="Grid-cell">
 
       <h4>INTERIOR VIEW</h4>
-      <h6>F1-5 with Facade Detail </h6>
+      <h5>F1-5 with Facade Detail </h5>
     </div>
   </div>
   <!-- renders -->
@@ -343,7 +353,7 @@
     </div>
     <div class="Grid-cell">
       <h4>INTERIOR VIEW</h4>
-      <h6>Interior view from the activity room </h6>
+      <h5>Interior view from the activity room </h5>
     </div>
   </div>
   <!-- renders -->
@@ -359,7 +369,7 @@
     </div>
     <div class="Grid-cell">
       <h4>STREET VIEW</h4>
-      <h6>Street view from south west</h6>
+      <h5>Street view from south west</h5>
     </div>
   </div>
   <!-- renders -->
@@ -387,7 +397,7 @@
     </div>
     <div class="Grid-cell">
       <h4>Floor Plans</h4>
-      <h6>F1 and F2</h6>
+      <h5>F1 and F2</h5>
     </div>
   </div>
   <div class="blankHS"></div>
@@ -400,7 +410,7 @@
     </div>
     <div class="Grid-cell">
       <h4>Floor Plans</h4>
-      <h6>F3 and F4</h6>
+      <h5>F3 and F4</h5>
     </div>
   </div>
   <div class="blankHS"></div>
@@ -412,7 +422,7 @@
     </div>
     <div class="Grid-cell">
       <h4>Floor Plans</h4>
-      <h6>F5 and Facade Detail</h6>
+      <h5>F5 and Facade Detail</h5>
     </div>
   </div>
   <!-- floor plans -->
@@ -427,7 +437,7 @@
     </div>
     <div class="Grid-cell">
       <h4>Sections</h4>
-      <h6>North - South</h6>
+      <h5>North - South</h5>
     </div>
   </div>
   <div class="Grid Grid--full u-textCenter wrapper">
@@ -436,7 +446,7 @@
     </div>
     <div class="Grid-cell">
       <h4>Sections</h4>
-      <h6>East - West</h6>
+      <h5>East - West</h5>
     </div>
   </div>
   <!-- sections -->
@@ -465,9 +475,9 @@
     </div>
     <div class="Grid-cell">
       <h4>Site</h4>
-      <h6>110 Franklin St. San Francisco, CA, 94102
+      <h5>110 Franklin St. San Francisco, CA, 94102
 
-      </h6>
+      </h5>
     </div>
   </div>
 
