--- a/glorify/index.html
+++ b/glorify/index.html
@@ -142,7 +142,7 @@
   <!--progressBarScroll-->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      <a href="http://vickywang.me/"><img class="logo pointer paddingS" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
 
       <div class="navbar">
         <ul class="nav-menu">
