--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 
           </div>
         </div>
+
         <div class="Grid Grid--full">
           <div class="Grid-cell">
             <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
@@ -233,20 +234,64 @@
           </div>
 
         </div>
-        <div class="Grid Grid--gutters Grid--cols-3">
-          <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-            <img class="intro-logo" src="./icon/in.svg" alt="LinkedIn">
-          </a>
-          <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-            <img class="intro-logo" src="./icon/git.svg" alt="GitHub">
-          </a>
-          <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-            <img class="intro-logo" src="./icon/Codepen.svg" alt="CodePen">
-          </a>
-          <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
-            <img class="intro-logo" src="./icon/ins.svg" alt="Instagram">
-          </a>
+        <div class="Grid Grid--gutters Grid--cols-12 u-textCenter Grid--center">
+          <div class="Grid-cell">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+
+          </div>
+          <div class="Grid-cell">
+            <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+            </a>
+          </div>
+
+          <div class="Grid-cell">
+            <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+            </a>
+          </div>
+
+          <div class="Grid-cell">
+            <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
+              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/ins.svg" alt="Instagram">
+            </a>
+          </div>
+
+
+
+
+
+          <div class="Grid-cell">
+          </div>
+          <div class="Grid-cell">
+          </div>
+          <div class="Grid-cell">
+          </div>
+          <div class="Grid-cell">
+          </div>
+          <div class="Grid-cell">
+          </div>
+          <div class="Grid-cell">
+          </div>
+          <div class="Grid-cell">
+          </div>
+
+
+          
+          
         </div>
+
+
         <div class="Grid Grid--gutters Grid--cols-3">
           <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
               &nbsp;
@@ -532,8 +577,7 @@
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/git.svg" alt="GitHub"
-                title="GitHub">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/git.svg" alt="GitHub" title="GitHub">
             </a>
           </div>
           <div class="Grid-cell">
@@ -552,7 +596,7 @@
     </div>
     <div class="blankHM"></div>
     <div class="blankPhone"></div>
-  <!--footer-->
+    <!--footer-->
 
 
 
