--- a/index.html
+++ b/index.html
@@ -565,29 +565,29 @@
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
               </button>
             </div>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
             </a>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/git.svg" alt="GitHub" title="GitHub">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/git.svg" alt="GitHub" title="GitHub">
             </a>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
             </a>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
                 title="Instagram">
             </a>
           </div>
