--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3306,8 +3306,37 @@
             </div>
           </div>
         </div>
+        <div class="blankHS"></div>
 
 
+
+        <!-- Arrow -->
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h2 class="tArrow">Graph - Rate <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="Grid Grid--full wrapper">
+
+          <div class="Grid-cell">
+            <div class="element">
+
+              <h5 class="centerVer">
+                <strong class="Grey800">Lorem ipsum&#58; </strong> &#160; 2/3 &#160;
+
+                <div class="iconS"><img src="../glorify/Profile_Color.svg"></div>
+                <div class="iconS"><img src="../glorify/Profile_Color.svg"></div>
+                <div class="iconS"><img src="../glorify/Profile_Grey.svg"></div>
+              </h5>
+
+
+            </div>
+          </div>
+        </div>
       </section>
       <section id="content33">
         <div class="wrapper">
@@ -4021,30 +4050,30 @@
           <div class="Grid-cell">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
               </button>
             </div>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
             </a>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub"
                 title="GitHub">
             </a>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
             </a>
           </div>
           <div class="Grid-cell">
             <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
                 title="Instagram">
             </a>
           </div>
