--- a/application_info/index.html
+++ b/application_info/index.html
@@ -542,31 +542,51 @@
   <!--back to top-->
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="element">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub">
-          </a>
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram">
-          </a>
+    <div class="blankHM"></div>
+    <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4> &#169; 2023 &#8212; VICKY WANG</h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+          <div class="Grid-cell">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </footer>
-  <!--footer-->
-
+    <div class="blankHM"></div>
+    <div class="blankPhone"></div>
+    <!--footer-->
 
 </body>
 
