--- a/glorify/index.html
+++ b/glorify/index.html
@@ -142,7 +142,8 @@
   <!--progressBarScroll-->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/"><img class="logo pointer paddingS" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+      <a href="http://vickywang.me/"><img class="logo pointer paddingS" src="../icon/LOGO.svg" alt="VW"
+          title="vickywang.me"></a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -2014,12 +2015,15 @@
             <div class="Grid-cell">
               <div class="element">
                 <h3> <strong> Conclusion </strong> </h3>
-                <p>In summary, while both concepts have their merits, the feedback indicates that participants value a
-                  balance between <span class="textDecor GLORIFY">personal spiritual growth</span> and <span
-                    class="textDecor GLORIFY">active community interaction</span>. They appreciate clarity in
-                  tasks and a platform that promotes both <span class="textDecor GLORIFY">individual reflection and
-                    group bonding</span>.
-                </p>
+
+                <p>With feedback from three participants, both concepts appear promising. While the "Facilitating a
+                  Group Prayer Session" had slightly higher overall feedback, there were still areas for improvement in
+                  both. </p>
+
+                <p>Given the limited number of participants, it would be advisable to gather feedback from a larger
+                  group
+                  for more comprehensive insights. However, these initial findings can guide early iterations of the
+                  features.</p>
               </div>
             </div>
           </div>
@@ -2042,60 +2046,98 @@
           <!-- Arrow -->
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--cols-3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h4> <strong> Concept A - Bible Study</strong> </h4>
+          <div class="Grid Grid--full">
 
-                <ul>
-                  <li class="listCircle">The exclusivity of keyboard-based chatting limits the depth and spontaneity of
-                    discussions in the Bible study.
-                  </li>
-                  <li class="listCircle">Focusing solely on a single topic could reduce the diversity of discussions and
-                    engagement levels.
-                  </li>
-                  <li class="listCircle">Prolonged sessions risk users becoming disengaged or distracted from the
-                    primary topic.
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <h4> <strong> Concept B - Group Prayer</strong> </h4>
-                <ul>
-                  <li class="listCircle">This concept builds upon the current prayer feature in the app, expanding its
-                    capabilities.
-                  </li>
-                  <li class="listCircle">While the central focus is prayer, there's an evident desire among users to
-                    chat and connect with each other during the waiting period.
-                  </li>
-                  <li class="listCircle">Consider a streamlined way for users to connect with fellowships, bypassing the
-                    formality of sending individual fellowship requests.
-                  </li>
-                </ul>
 
-              </div>
-            </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h4> <strong> Iterative Concept B - Enhanced Group Prayer</strong> </h4>
-                <ul>
-                  <li class="listCircle">Merging key feedback from Concept A, we introduce a chat feature within the
-                    Group Prayer room. This allows users to engage in light discussions before transitioning into the
-                    prayer session.
-                  </li>
-                  <li class="listCircle">The application will archive the history of group prayers, creating a record of
-                    fellowships that have prayed together, fostering a sense of community and continuity.
-
-
-
-                  </li>
-                </ul>
+                <h4> <strong>Iteration Ideas for Facilitating a Group Prayer Session
+                  </strong> </h4>
+                <P>These are basic yet effective iterations for an initial version of the "Facilitating a Group Prayer
+                  Session" feature. Once launched, gathering user feedback will provide insights into further
+                  refinements and additions.
+                </P>
               </div>
             </div>
           </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+
+                <h4> <strong>Basic Features:</strong> </h4>
+                <div class="blankHXS"></div>
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Chat</strong>
+                </h4>
+                <h5> <strong class="Grey800">Send&#58; </strong>Design an intuitive message input area with a clear
+                  'send' button for ease of use.</h5>
+                <h5> <strong class="Grey800">Receive&#58; </strong>Ensure messages are displayed in a clear and readable
+                  format. Incoming messages should be differentiated from the user's messages, perhaps through color or
+                  positioning.</h5>
+                <h5> <strong class="Grey800">Reply&#58; </strong>Implement a direct reply feature allowing users to
+                  respond to specific messages, ensuring that conversations remain organized.</h5>
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Fellowship</strong>
+                </h4>
+                <h5> <strong class="Grey800">Add&#58; </strong>Simplify the process of adding members to the fellowship
+                  group, potentially through a search bar and an 'add' button next to user names.</h5>
+                <h5> <strong class="Grey800">Accept&#58; </strong>Send clear notifications to users when they receive
+                  fellowship requests. Allow them to easily accept or decline from the notification.</h5>
+                <h5> <strong class="Grey800">Remove&#58; </strong>Offer group admins the option to remove a participant
+                  if necessary, but ensure that the process requires confirmation to avoid accidental removals.</h5>
+
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+                <h4> <strong> The Group Prayer Session:</strong> </h4>
+                <div class="blankHXS"></div>
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Create</strong>
+                </h4>
+
+                <h5> <strong class="Grey800">Create&#58; </strong>Design a clear and simple process for creating a group
+                  prayer session. This could be a straightforward form asking for session name, description, and maximum
+                  participants.
+                </h5>
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Participation</strong>
+                </h4>
+
+                <h5> <strong class="Grey800">Join&#58; </strong>Streamline joining with a clear 'Join' button on the
+                  session page. Consider offering a brief overview of the session when a user hovers over or clicks the
+                  session name before joining.</h5>
+
+                <h5> <strong class="Grey800">Engage&#58; </strong>Ensure stability in the chat and fellowship features
+                  so participants can engage smoothly throughout the session.</h5>
+
+                <h4 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Leave</strong>
+                </h4>
+
+
+                <h5> <strong class="Grey800">Leave&#58; </strong>Make leaving the session uncomplicated with a clear
+                  'Leave' or 'Exit' button. Upon pressing, perhaps prompt the user with a confirmation to avoid
+                  unintentional exits.
+
+                </h5>
+
+              </div>
+            </div>
+
+          </div>
+
+
+
+
         </div>
+
+
         <div class="blankHS"></div>
 
       </section>
@@ -2747,12 +2789,16 @@
                 <div class="Grid-cell">
                   <h4> <strong class="colorGLORIFYOrange"> Connect Fellowship Flow </strong> </h4>
                   <h5><strong>Task:</strong> Use the icon beside the profile to add a fellowship</h5>
-                  <h5><strong>Scenario:</strong> During a group prayer session, you came across someone whose insights and perspectives resonated deeply with you. You decide you'd like to connect with them more often and choose to add them to your fellowship.</h5>
+                  <h5><strong>Scenario:</strong> During a group prayer session, you came across someone whose insights
+                    and perspectives resonated deeply with you. You decide you'd like to connect with them more often
+                    and choose to add them to your fellowship.</h5>
                   <div class="blankHXS"></div>
 
 
                   <h5><strong>Task:</strong> Remove or disconnect from a fellowship</h5>
-                  <h5><strong>Scenario:</strong> Over time, you've realized that you share fewer common interests with a member of your fellowship. You decide it's best to disconnect and make space for new connections.</h5>
+                  <h5><strong>Scenario:</strong> Over time, you've realized that you share fewer common interests with a
+                    member of your fellowship. You decide it's best to disconnect and make space for new connections.
+                  </h5>
 
 
                 </div>
