--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2180,6 +2180,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2203,7 +2205,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
+          <div class="blankHS"></div>
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2215,6 +2217,7 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
 
 
           <div class="wrapper">
@@ -2653,8 +2656,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Test plan - Wireframe Test on Figma <img class="seArrow" src="../icon/arrow-se.svg"
-                    alt="icon arrow">
+                <h2 class="tArrow">Test plan <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
@@ -2708,9 +2710,6 @@
                 <div class="Grid-cell">
                   <h4> <strong> Test Procedure:</strong> </h4>
                   <ul>
-                    <li><strong>Recruitment of Participants:</strong>Select 3 users, aiming for a mix of those familiar
-                      with the current system and potential new users.
-                    </li>
                     <li><strong> Task Distribution: </strong>Assign tasks related to the new features.</li>
                     <li><strong> Observation: </strong>Monitor how participants navigate, noting any hesitations or
                       areas of confusion.</li>
@@ -2825,6 +2824,88 @@
           </div>
           <!-- Arrow -->
           <!-- wireframe 1 -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Group Prayer </strong> </h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4> <strong>Create a group prayer </strong> </h4>
+
+                <h5 class="centerVer">
+                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 2 minutes &#160;</h5>
+
+
+                <h5 class="centerVer">
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS help" title="1 participant struggled to differentiate between ongoing and upcoming sessions"><img src="Profile_Grey.svg"></div>
+
+                </h5>
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants mentioned they’d like clearer
+                  prompts on what details to include for the prayer topic. &#160;
+                </h5>
+                <h5>
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
+                </h5>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h4> <strong>Locate and join an existing group prayer </strong> </h4>
+
+                <h5 class="centerVer">
+                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 2 minutes &#160;</h5>
+
+
+                
+                <h5 class="help" title="The quickest time a user is able to complete a task, assuming no errors.">
+                  Minimum&#58; <strong>Error Rate</strong> </h5>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 2 minutes &#160;
+                </h5>
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants mentioned they’d like clearer
+                  prompts on what details to include for the prayer topic. &#160;
+                </h5>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
+                </h5>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Chat </strong> </h3>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
 
 
           <div class="element">
@@ -2862,7 +2943,7 @@
               </div>
             </div>
             <div class="barGraph element">
-              <div>
+              <div class="widthS">
                 <div class="GraphText">User Understanding</div>
                 <div class="GraphText">Task Success Rate</div>
                 <div class="GraphText">User Satisfaction:</div>
